# rmq-tf-generator

./: .gitignore  .gitlab-ci.yml  .prospector.yaml  README.md  header.tf  pyproject.toml  pytest.ini  rabbitmq.j2  rabbitmq.j2tf  requirements.txt  rmq_tf_generator.py  setup.cfg  setup.py
src/: __main__.py  rabbitmq.j2tf  rmq_tf_generator.py
tests/: test_rmq_tf_generator.py
tests/success_cases/double_two/: config.tf  fs.json
tests/success_cases/empty_group_queue/: config.tf  fs.json
tests/success_cases/four_complex/: config.tf  fs.json
tests/success_cases/group_empty_queue/: config.tf  fs.json
tests/success_cases/group_queue/: config.tf  fs.json
tests/success_cases/group_queue_and_entities/: config.tf  fs.json
tests/success_cases/group_queue_and_entity/: config.tf  fs.json
tests/success_cases/group_queues/: config.tf  fs.json
tests/success_cases/group_queues_with_equal_entities_in_subdir/: config.tf  fs.json
tests/success_cases/group_queues_with_equal_entities_in_subdir_and_dir/: config.tf  fs.json
tests/success_cases/one_to_one/: config.tf  fs.json
tests/success_cases/one_to_one_bidirectional/: config.tf  fs.json
tests/success_cases/one_to_one_bidirectional_redundancy/: config.tf  fs.json
tests/success_cases/one_to_one_with_diff_account/: config.tf  fs.json
tests/success_cases/one_to_two/: config.tf
tests/success_cases/one_to_two_one_entity/: config.tf  fs.json
tests/success_cases/one_to_two_two_entity/: config.tf  fs.json
tests/success_cases/one_to_zero/: config.tf  fs.json
tests/success_cases/three_in_circle/: config.tf  fs.json
(+4 files in other folders)
