[metadata]
name = rmq-tf-generator
version = 0.0.1
author = pik-software
author_email = no-reply@pik-software.ru
description = Util for generate terraform config for rabbitmq
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pik-software/rmq-tf-generator
project_urls =
    Bug Tracker = https://github.com/pik-software/rmq-tf-generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    argparse
    jinja2
    prospector
    pytest
    pytest-cov
    attrs
    pyfakefs

[options.packages.find]
where = src
